fix(swipe): position strikethrough at task title center and reduce left offset
- Reduce left offset from 40px to 24px so the line doesn't start too far right
- Dynamically calculate Y position based on .first-line element center
  instead of using top: 50% which misaligns on tasks with subtasks

--- a/src/app/ui/swipe-block/swipe-block.component.scss
+++ b/src/app/ui/swipe-block/swipe-block.component.scss
@@ -12,7 +12,7 @@
 // STRIKETHROUGH LINE (swipe-right gesture)
 .strikethrough-line {
   position: absolute;
-  left: 40px;
+  left: 24px;
   height: 2.5px;
   width: 0;
   top: 50%;
